--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -1,4 +1,6 @@
 {% extends 'authapp/base.html' %}
+<meta name="description" content="Вход, авторизация"/>
+
 {{%block content%}
   <body class="text-center">
 
