--- a/main/templates/main/types.html
+++ b/main/templates/main/types.html
@@ -33,19 +33,25 @@
                             <span aria-hidden="true">&laquo;</span>
                           </a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="{% url 'products:page' category.pk products.previous_page_number %}">{{products.previous_page_number}}</a></li>
+                        <li class="page-item"><a class="page-link" href="{% url 'products:type_page' types.pk products.previous_page_number %}">{{products.previous_page_number}}</a></li>
                           {% endif %}
                         <li class="page-item"><a class="page-link" href="#" style="font-size: 22px;">{{products.number}}</a></li>
                           {% if products.has_next %}
-                        <li class="page-item"><a class="page-link" href="{% url 'products:page' category.pk products.next_page_number %}">{{products.next_page_number}}</a></li>
-                        <li class="page-item">
-                          <a class="page-link" href="{% url 'products:page' category.pk last_page %}" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
+                        <li class="page-item"><a class="page-link" href="{% url 'products:type_page' types.pk products.next_page_number %}">{{products.next_page_number}}</a></li>
+                        <li class="page-item" style="margin-left:5px;">
+                          <a class="page-link" href="{% url 'products:type_page' types.pk last_page %}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;{{last_page}}&raquo;</span>
                           </a>
                         </li>
                             {% endif %}
+                          <form method="get" style="margin-left: 100px">
+                                <button type="submit" class="btn btn-sm btn-outline-dark btn-raised mr-3">Сортировать</button>
+                                <input name="sort" type="checkbox" value="price"> Дешевле
+                                <input name="sort" type="checkbox" value="-price"> Дороже
+                            </form>
                       </ul>
                     </div>
+
             <div class="category-products clearfix">
                 {%for product in products%}
                 <div class="block">
@@ -74,14 +80,14 @@
                             <span aria-hidden="true">&laquo;</span>
                           </a>
                         </li>
-                        <li class="page-item"><a class="page-link" href="{% url 'products:page' category.pk products.previous_page_number %}">{{products.previous_page_number}}</a></li>
+                        <li class="page-item"><a class="page-link" href="{% url 'products:type_page' types.pk products.previous_page_number %}">{{products.previous_page_number}}</a></li>
                           {% endif %}
                         <li class="page-item"><a class="page-link" href="#" style="font-size: 22px;">{{products.number }}</a></li>
                           {% if products.has_next %}
-                        <li class="page-item"><a class="page-link" href="{% url 'products:page' category.pk products.next_page_number %}">{{products.next_page_number}}</a></li>
-                        <li class="page-item">
-                          <a class="page-link" href="{% url 'products:page' category.pk last_page %}" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
+                        <li class="page-item"><a class="page-link" href="{% url 'products:type_page' types.pk products.next_page_number %}">{{products.next_page_number}}</a></li>
+                        <li class="page-item" style="margin-left:5px;">
+                          <a class="page-link" href="{% url 'products:type_page' types.pk last_page %}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;{{last_page}}&raquo;</span>
                           </a>
                         </li>
                             {% endif %}
