--- a/authapp/templates/authapp/base.html
+++ b/authapp/templates/authapp/base.html
@@ -23,6 +23,20 @@
 		<link href="https://fonts.googleapis.com/css2?family=Neucha&family=Orelega+One&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 		<link href="{%static 'signin.css'%}" rel="stylesheet">
 	{%endblock%}
+	<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(87808261, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/87808261" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 	<style>
       .bd-placeholder-img {
         font-size: 1.125rem;
