--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -71,10 +71,10 @@
 					</form>
 				</div>
 			</div>
-			<p class="small">&copy; Nariman Mukhtarov {%now 'Y'%}</p>
+			<p class="small">&copy; ЛУЧИ СВЕТА {%now 'Y'%}</p>
 
 
-			<p class="small"><a href="{%url 'main:info'%}">Положения &amp; Условия  /  Конфиденциальность &amp; Cookies</a></p>
+			<p STYLE="margin-left:100px" class="small"><a href="{%url 'main:info'%}">Положения &amp; Условия  /  Конфиденциальность &amp; Cookies</a></p>
 			<p class="small" style="text-align: justify;font-size: 10px; margin-top: 12px; line-height: 10px; margin-bottom: 12px">Вся представленная на сайте информация, касающаяся наличия, комплектации, технических характеристик, цветовых сочетаний, а также стоимости носит информационный характер и не является публичной офертой, определяемой положениями Статьи 437 ГК РФ. Для получения подробной информации обращайтесь к менеджерам Интернет-Магазин по тел. +7(929)601-17-76.
 				Опубликованная на сайте информация может быть изменена в любое время без предварительного уведомления.</p></div>
 
