--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -9,8 +9,8 @@
 				{%include 'main/inc/inc_main_menu.html'%}
 			</div>
 			<div class="text-slider">
-				<h3 class="green">выбирай</h3>
-				<h3 class="big"> Лучшие люстры</h3>
+				<h3 class="green">сделай</h3>
+				<h3 class="big">жизнь ярче</h3>
 				<a href="/products" class="button-order">каталог <img src="/static/img/arrow.png" alt=""></a>
 			</div>	
 			<div class="navi">
@@ -22,7 +22,7 @@
 	{%endblock%}
 {%block content%}
 <div style="margin-top: 100px">
-	<img src="/static/img/акция1.jpg" width="100%">
+	<a href="{%url 'products:sales'%}"><img src="/static/img/акция1.jpg" width="100%"></a>
 </div>
 <div class="category-products clearfix" style="margin-top: 10%">
 
@@ -35,12 +35,13 @@
 						  {%elif type.name == "Напольные светильники (торшеры)"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/84cb6ecd-b24f-48b9-a888-27e3e19a0c00/s/MOD006FL-01B_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Спот"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/ebb6a448-ae01-476d-9d39-b6644a39c0e6/s/FR10006CW-L6W_on_w_standard_(1).jpeg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Настенные светильники (бра)"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/9d0f3452-ac65-40e4-b9aa-09cf5195f815/s/RC098-WL-01-R_on_w.jpg" alt="{{product.name}}" height="300px">
-						  {%elif type.name == "Аксессуары"%}<img src="http://www.stluce.ru/upload/images/ST015.500.98_01W.jpg" alt="{{product.name}}" height="270px">
 						  {%elif type.name == "Трековые светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/4cabde78-9fe6-4253-b49b-1cb1f67319d6/s/TR019-2-15W3K-MG_on_w_(2).jpg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Подсветка"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/979c7bc6-f608-493d-9a75-91c90e42b5f1/s/MIR014WL-L10G3K_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Встраиваемые светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/7fd94198-1bb6-4a84-9360-4ce1af76fe9f/s/DL008-2-02-W_on_w_(1).jpg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Ландшафтные светильники"%}<img src="http://mais-upload.s3.amazonaws.com/upload/media/8d218cb6-eb68-450e-bd46-6aaedcfff166/s/O004FL-01B_on_w_(1).jpg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Светодиодные ленты"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/5a2a9665-f864-4198-9d67-a8b6f872a2fd/s/interior_ALM008S-2M_standard.jpeg" alt="{{product.name}}" height="300px">
+						  {%elif type.name == "Аксессуары"%}<img src="http://www.stluce.ru/upload/images/ST015.500.98_01W.jpg" alt="{{product.name}}" height="270px">
+						  {%elif type.name == "Умный дом"%}<img src="https://elektrostandard.ru/images/catalog/zvonok-besprovodnoy-dbq01m-wl-36m-ip44-belyy-9a4400501febb2a95e79248486a5f6d3.jpg" alt="{{product.name}}" height="300px">
 						  {%elif type.name == "Лампочки"%}<img src="https://onec-dev.s3.amazonaws.com/upload/media/4d31817e-8516-4706-8570-4f2f2dda23b1/s/2428_on_w_standard.jpeg" alt="{{product.name}}" height="300px">
 						  {%endif%}
 					  </a>
