add price/maytoni and price/mw

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -17,8 +17,9 @@
 		</div>
 	{%endblock%}
 {%block content%}
+
 <div style="margin-top: 100px">
-	<a href="{%url 'products:sales'%}"><img src="/static/img/акция1.jpg" width="100%"></a>
+	<a href="{%url 'products:sales'%}"><img src="/static/img/апрель-st.jpg" width="100%"></a>
 </div>
 <div class="category-products clearfix" style="margin-top: 10%">
 
