--- a/main/templates/main/products_list.html
+++ b/main/templates/main/products_list.html
@@ -95,5 +95,8 @@
         </div>
 
     </div>
-    <div class="clr"></div>
+    <div class="" style="display: flex; margin-left:10%">
+        <a href="{%url 'products:sales'%}"><img src="/static/img/акция.jpg" width="100%"></a>
+        <a href="{%url 'products:sales'%}"><img src="/static/img/апрель-st.jpg" width="70%"></a>
+    </div>
 {%endblock%}
