--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="yandex-verification" content="12c3a995b036b74c" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">.
 	<title>
 		{% block title%}
 			{{title| upper}}
