change description teg

--- a/authapp/templates/authapp/anonym.html
+++ b/authapp/templates/authapp/anonym.html
@@ -1,5 +1,6 @@
 {% extends "authapp/base.html" %}
 {% load static %}
+<meta name="description" content="Лучи Света. Анонимный пользователь"/>
 
 {% block content %}
 
