--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -1,5 +1,6 @@
 {% extends 'authapp/base.html' %}
 <meta name="description" content="Вход, авторизация"/>
+<meta name="description" content="Лучи Света. Аунтификация пользователя. Вход"/>
 
 {{%block content%}
   <body class="text-center">
