--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -1,5 +1,6 @@
 {% extends 'authapp/base.html' %}
 {%load static%}
+<meta name="description" content="Лучи Света. Регистрация пользователя"/>
 
 
 {%block content%}
