--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1881,3 +1881,13 @@ a {
     margin:auto;
 
 }
+
+#form-number {
+    width:5em;
+    border: px solid #ccc;
+    margin: 5px;
+}
+.search-form {
+    width:400px;
+    border: 2px solid #ccc;
+}
