--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -19,7 +19,7 @@
 {%block content%}
 
 <div style="margin-top: 100px">
-	<a href="{%url 'products:sales'%}"><img src="/static/img/апрель-st.jpg" width="100%"></a>
+	<a href="{%url 'products:sales'%}"><img src="/static/img/май-st.jpg" width="100%" height="500px"></a>
 </div>
 <div class="category-products clearfix" style="margin-top: 10%">
 
